--- a/views/bookinstance_delete.pug
+++ b/views/bookinstance_delete.pug
@@ -1,9 +1,10 @@
 extends layout
 
 block content
+
   h1 #{title}: #{bookinstance._id}
-  p #[strong Title:] 
-    a(href=bookinstance.book.url) #{bookinstance.book.title}
+
+  p #[strong Title:] #{bookinstance.due_back_formatted}
   p #[strong Imprint:] #{bookinstance.imprint}
   
   p Do you really want to delete this Bookinstance?
